--- a/app/src/main/res/layout/act_main_frag.xml
+++ b/app/src/main/res/layout/act_main_frag.xml
@@ -10,14 +10,12 @@
 	tools:context=".ActMain"
 	>
 
-	<TextView
-		android:id="@+id/lblTitulo"
+	<ListView
+		android:id="@+id/listView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_centerHorizontal="true"
-		android:text="@string/enter_lbl"
-		style="@android:style/TextAppearance.Large"
-		/>
-
+		android:layout_alignParentTop="true"
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
