--- a/app/src/main/res/menu/menu_act_main.xml
+++ b/app/src/main/res/menu/menu_act_main.xml
@@ -1,10 +1,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
 	  xmlns:app="http://schemas.android.com/apk/res-auto"
 	  xmlns:tools="http://schemas.android.com/tools"
-	  tools:context=".ActLogin">
+	  tools:context=".ActMain">
 	<item
-		android:id="@+id/action_settings"
+		android:id="@+id/action_mapa"
 		android:orderInCategory="100"
-		android:title="@string/action_settings"
+		android:title="@string/ver_mapa"
+		android:icon="@android:drawable/ic_menu_mapmode"
+		app:showAsAction="ifRoom"/>
+	<item
+		android:id="@+id/action_config"
+		android:orderInCategory="110"
+		android:icon="@android:drawable/ic_menu_preferences"
+		android:title="@string/config"
 		app:showAsAction="never"/>
 </menu>
