--- a/app/src/main/res/layout/lista.xml
+++ b/app/src/main/res/layout/lista.xml
@@ -3,19 +3,21 @@
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:orientation="horizontal"
-	android:background="#888"
+	android:background="#FFF"
+	android:layout_margin="0dp"
 	>
 
 	<TextView
 		android:id="@+id/txtNombre"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
-		android:paddingLeft="35dp"
-		android:paddingStart="35dp"
+		android:layout_marginLeft="5dp"
+		android:layout_marginStart="5dp"
+		android:text="AAAAAAAAAAAAAAA"
 		android:textSize="24sp"
 		android:textStyle="bold"
 		android:fontFamily="sans-serif"
-		android:textColor="@android:color/holo_green_light"
+		android:textColor="@android:color/holo_green_dark"
 		android:layout_gravity="center_vertical"
 		android:gravity="center_vertical"
 		android:focusable="false"
@@ -25,10 +27,9 @@
 
 	<ImageButton
 		android:id="@+id/btnEditar"
+		android:layout_toLeftOf="@+id/btnMapa"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_alignParentRight="true"
-		android:layout_alignParentEnd="true"
 		android:layout_centerVertical="true"
 		android:layout_marginRight="15dp"
 		android:layout_marginEnd="15dp"
@@ -45,12 +46,12 @@
 		android:layout_alignParentRight="true"
 		android:layout_alignParentEnd="true"
 		android:layout_centerVertical="true"
-		android:layout_marginRight="15dp"
-		android:layout_marginEnd="15dp"
+		android:layout_marginRight="5dp"
+		android:layout_marginEnd="5dp"
 		android:background="@android:color/transparent"
 		android:contentDescription="@string/ver_mapa"
 		android:layout_gravity="center"
 		android:focusable="false"
-		android:src="@android:drawable/ic_menu_edit" />
+		android:src="@android:drawable/ic_menu_mapmode" />
 
 </RelativeLayout>
