--- a/app/src/main/res/layout/act_ruta.xml
+++ b/app/src/main/res/layout/act_ruta.xml
@@ -6,7 +6,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:fitsSystemWindows="true"
-	tools:context="com.cesoft.encuentrame.ActAviso">
+	tools:context="com.cesoft.encuentrame.ActRuta">
 
 	<android.support.design.widget.AppBarLayout
 		android:layout_width="match_parent"
@@ -22,7 +22,7 @@
 
 	</android.support.design.widget.AppBarLayout>
 
-	<include layout="@layout/act_lugar_cont"/>
+	<include layout="@layout/act_ruta_cont"/>
 
 	<android.support.design.widget.FloatingActionButton
 		android:id="@+id/fab"
