--- a/app/src/main/res/layout/act_ruta_cont.xml
+++ b/app/src/main/res/layout/act_ruta_cont.xml
@@ -10,8 +10,8 @@
 	android:paddingRight="@dimen/activity_horizontal_margin"
 	android:paddingTop="@dimen/activity_vertical_margin"
 	app:layout_behavior="@string/appbar_scrolling_view_behavior"
-	tools:context="com.cesoft.encuentrame.ActAviso"
-	tools:showIn="@layout/act_aviso">
+	tools:context="com.cesoft.encuentrame.ActLugar"
+	tools:showIn="@layout/act_ruta">
 
 
 	<android.support.design.widget.TextInputLayout
