--- a/app/src/main/res/layout/act_aviso_cont.xml
+++ b/app/src/main/res/layout/act_aviso_cont.xml
@@ -103,7 +103,7 @@
 		android:layout_below="@+id/layPosicion"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-        android:prompt="@string/periodo" />
+        android:prompt="@string/radio" />
 		/>
 
 	<LinearLayout
