--- a/app/src/main/res/layout/act_aviso_cont.xml
+++ b/app/src/main/res/layout/act_aviso_cont.xml
@@ -73,7 +73,7 @@
 			android:id="@+id/lblPosicion_"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:textAppearance="?android:attr/textAppearanceLarge"
+			android:textAppearance="?android:attr/textAppearanceMedium"
 			android:text="@string/lat_lon"
 			android:layout_marginRight="15dp"
 			android:layout_marginEnd="15dp"
@@ -83,8 +83,8 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:layout_marginRight="15dp"
-			android:layout_marginEnd="15dp"
+			android:layout_marginRight="10dp"
+			android:layout_marginEnd="10dp"
 			android:text="0.0/0.0"
 			android:layout_gravity="center_vertical"/>
 		<ImageButton
@@ -98,42 +98,29 @@
 			android:src="@android:drawable/ic_menu_mylocation" />
 	</LinearLayout>
 
-	<Spinner
-		android:id="@+id/spnRadio"
-		android:layout_below="@+id/layPosicion"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-        android:prompt="@string/radio" />
-		/>
-
 	<LinearLayout
-		android:id="@+id/layStartStop"
-		android:layout_below="@+id/spnRadio"
+		android:id="@+id/layRadio"
+		android:layout_below="@+id/layPosicion"
 		android:orientation="horizontal"
 		android:layout_centerHorizontal="true"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="20dp">
-		<ImageButton
-			android:id="@+id/btnStart"
+		android:layout_marginTop="10dp">
+		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginRight="20dp"
-			android:layout_marginEnd="20dp"
-			android:contentDescription="@string/start"
-			android:src="@android:drawable/ic_media_play" />
-		<ImageButton
-			android:id="@+id/btnStop"
+			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:text="@string/radio"/>
+		<Spinner
+			android:id="@+id/spnRadio"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginRight="20dp"
-			android:layout_marginEnd="20dp"
-			android:contentDescription="@string/stop"
-			android:src="@android:drawable/ic_media_pause" />
+			android:textAppearance="?android:attr/textAppearanceLarge"
+			android:prompt="@string/radio" />
 	</LinearLayout>
 
 	<LinearLayout
-		android:layout_below="@+id/spnRadio"
+		android:layout_below="@+id/layRadio"
 		android:orientation="horizontal"
 		android:layout_centerHorizontal="true"
 		android:layout_width="wrap_content"
@@ -144,8 +131,8 @@
 			android:id="@+id/btnGuardar"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginRight="10dp"
-			android:layout_marginEnd="10dp"
+			android:layout_marginRight="20dp"
+			android:layout_marginEnd="20dp"
 			android:contentDescription="@string/guardar"
 			android:src="@android:drawable/ic_menu_save" />
 
@@ -153,8 +140,8 @@
 			android:id="@+id/btnMapa"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginRight="10dp"
-			android:layout_marginEnd="10dp"
+			android:layout_marginRight="20dp"
+			android:layout_marginEnd="20dp"
 			android:contentDescription="@string/ver_mapa"
 			android:src="@android:drawable/ic_menu_mapmode" />
 
@@ -162,8 +149,8 @@
 			android:id="@+id/btnEliminar"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginRight="10dp"
-			android:layout_marginEnd="10dp"
+			android:layout_marginRight="20dp"
+			android:layout_marginEnd="20dp"
 			android:contentDescription="@string/eliminar"
 			android:src="@android:drawable/ic_menu_delete" />
 	</LinearLayout>
