--- a/app/src/main/res/layout/act_maps.xml
+++ b/app/src/main/res/layout/act_maps.xml
@@ -1,8 +1,23 @@
-<fragment android:id="@+id/map"
-		  android:name="com.google.android.gms.maps.SupportMapFragment"
-		  xmlns:android="http://schemas.android.com/apk/res/android"
-		  xmlns:map="http://schemas.android.com/apk/res-auto"
-		  xmlns:tools="http://schemas.android.com/tools"
-		  android:layout_width="match_parent"
-		  android:layout_height="match_parent"
-		  tools:context="com.cesoft.encuentrame.ActMaps"/>
+<RelativeLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent">
+
+	<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    	xmlns:tools="http://schemas.android.com/tools"
+		android:id="@+id/map"
+		android:name="com.google.android.gms.maps.SupportMapFragment"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		tools:context=".ActMaps" />
+
+	<ImageButton
+		android:id="@+id/btnGuardar"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignParentBottom="true"
+		android:layout_centerHorizontal="true"
+		android:text="@string/guardar"
+		android:src="@android:drawable/ic_menu_save"
+		/>
+</RelativeLayout>
