--- a/app/src/main/res/layout/act_login_frag.xml
+++ b/app/src/main/res/layout/act_login_frag.xml
@@ -16,6 +16,7 @@
 		android:layout_height="wrap_content"
 		android:layout_centerHorizontal="true"
 		android:text="@string/enter_lbl"
+		android:paddingTop="@dimen/activity_vertical_margin"
 		style="@android:style/TextAppearance.Large"
 		/>
 
