--- a/app/src/main/res/layout/act_lugar.xml
+++ b/app/src/main/res/layout/act_lugar.xml
@@ -24,7 +24,7 @@
 	<include layout="@layout/act_lugar_cont"/>
 
 	<android.support.design.widget.FloatingActionButton
-		android:id="@+id/fab"
+		android:id="@+id/fabVolver"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="bottom|end"
