--- a/app/src/main/res/layout/act_ruta.xml
+++ b/app/src/main/res/layout/act_ruta.xml
@@ -12,20 +12,18 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:theme="@style/AppTheme.AppBarOverlay">
-
 		<android.support.v7.widget.Toolbar
 			android:id="@+id/toolbar"
 			android:layout_width="match_parent"
 			android:layout_height="?attr/actionBarSize"
 			android:background="?attr/colorPrimary"
 			app:popupTheme="@style/AppTheme.PopupOverlay"/>
-
 	</android.support.design.widget.AppBarLayout>
 
 	<include layout="@layout/act_ruta_cont"/>
 
 	<android.support.design.widget.FloatingActionButton
-		android:id="@+id/fab"
+		android:id="@+id/fabVolver"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="bottom|end"
