--- a/app/src/main/res/layout/act_login_frag.xml
+++ b/app/src/main/res/layout/act_login_frag.xml
@@ -25,6 +25,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_below="@+id/lblTitulo"
+		android:paddingTop="@dimen/activity_vertical_margin"
 		>
 		<EditText
 			android:id="@+id/txtLogin"
