--- a/app/src/main/res/layout/act_aviso_cont.xml
+++ b/app/src/main/res/layout/act_aviso_cont.xml
@@ -18,7 +18,8 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_centerHorizontal="true"
-		android:paddingBottom="20dp"
+		android:layout_marginTop="5dp"
+		android:layout_marginBottom="5dp"
 		android:text="@string/activo"
 		/>
 
@@ -30,9 +31,7 @@
 		android:layout_alignParentLeft="true"
 		android:layout_alignParentStart="true"
 		android:layout_alignParentRight="true"
-		android:layout_alignParentEnd="true"
-		android:layout_alignParentTop="true"
-		>
+		android:layout_alignParentEnd="true">
 		<AutoCompleteTextView
 			android:id="@+id/txtNombre"
 			android:layout_width="match_parent"
