--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout android:id="@+id/main_content"
+<android.support.design.widget.CoordinatorLayout
+	android:id="@+id/main_content"
 	 xmlns:android="http://schemas.android.com/apk/res/android"
 	 xmlns:app="http://schemas.android.com/apk/res-auto"
 	 xmlns:tools="http://schemas.android.com/tools"
@@ -14,36 +15,23 @@
 		android:layout_height="wrap_content"
 		android:paddingTop="@dimen/appbar_padding_top"
 		android:theme="@style/AppTheme.AppBarOverlay">
-
 		<android.support.v7.widget.Toolbar
 			android:id="@+id/toolbar"
 			android:layout_width="match_parent"
 			android:layout_height="?attr/actionBarSize"
 			android:background="?attr/colorPrimary"
 			app:layout_scrollFlags="scroll|enterAlways"
-			app:popupTheme="@style/AppTheme.PopupOverlay">
-
-		</android.support.v7.widget.Toolbar>
-
+			app:popupTheme="@style/AppTheme.PopupOverlay" />
 		<android.support.design.widget.TabLayout
 			android:id="@+id/tabs"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"/>
-
 	</android.support.design.widget.AppBarLayout>
 
 	<android.support.v4.view.ViewPager
 		android:id="@+id/container"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-
-	<android.support.design.widget.FloatingActionButton
-		android:id="@+id/fabNuevo"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_gravity="center_horizontal|bottom"
-		android:layout_margin="@dimen/fab_margin"
-		android:src="@android:drawable/ic_input_add"/>
+		app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </android.support.design.widget.CoordinatorLayout>
