--- a/app/src/main/res/menu/menu_act_main.xml
+++ b/app/src/main/res/menu/menu_act_main.xml
@@ -11,7 +11,7 @@
 	<item
 		android:id="@+id/action_config"
 		android:orderInCategory="110"
-		android:icon="@android:drawable/ic_menu_preferences"
 		android:title="@string/config"
-		app:showAsAction="never"/>
+		android:icon="@android:drawable/ic_menu_preferences"
+		app:showAsAction="ifRoom"/>
 </menu>
