Terminando de mostrar mapa de lugares, avisos o rutas.. Se crea activity para filtro de lugares, rutas y avisos... Arreglando problema de orden de puntos...

--- a/app/src/main/res/layout/content_act_buscar.xml
+++ b/app/src/main/res/layout/content_act_buscar.xml
@@ -46,7 +46,7 @@
 
 	<LinearLayout
 		android:id="@+id/layRadio"
-		android:layout_below="@+id/layPosicion"
+		android:layout_below="@+id/txtNombre_"
 		android:orientation="horizontal"
 		android:layout_centerHorizontal="true"
 		android:layout_width="wrap_content"
