--- a/app/src/main/res/layout/act_aviso_cont.xml
+++ b/app/src/main/res/layout/act_aviso_cont.xml
@@ -32,13 +32,13 @@
 		android:layout_alignParentStart="true"
 		android:layout_alignParentRight="true"
 		android:layout_alignParentEnd="true">
-		<AutoCompleteTextView
+		<EditText
 			android:id="@+id/txtNombre"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:inputType="textPersonName"
 			android:ems="10"
 			android:hint="@string/nombre"
+			android:inputType="text"
 			android:maxLines="1"
 			android:singleLine="true"/>
 	</android.support.design.widget.TextInputLayout>
@@ -54,7 +54,7 @@
 		android:layout_alignParentLeft="true"
 		android:layout_alignParentStart="true"
 		>
-		<AutoCompleteTextView
+		<EditText
 			android:id="@+id/txtDescripcion"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
