--- a/app/src/main/res/layout/act_login_frag.xml
+++ b/app/src/main/res/layout/act_login_frag.xml
@@ -32,7 +32,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:hint="@string/cuenta"
-			android:inputType="text"
+			android:inputType="textPersonName"
 			android:maxLines="1"
 			android:singleLine="true"/>
 	</android.support.design.widget.TextInputLayout>
