--- a/app/src/main/res/layout/act_lugar_cont.xml
+++ b/app/src/main/res/layout/act_lugar_cont.xml
@@ -24,11 +24,10 @@
 		android:layout_alignParentEnd="true"
 		android:layout_alignParentTop="true"
 		>
-		<AutoCompleteTextView
+		<EditText
 			android:id="@+id/txtNombre"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:inputType="textPersonName"
 			android:ems="10"
 			android:hint="@string/nombre"
 			android:maxLines="1"
@@ -46,7 +45,7 @@
 		android:layout_alignParentLeft="true"
 		android:layout_alignParentStart="true"
 		>
-		<AutoCompleteTextView
+		<EditText
 			android:id="@+id/txtDescripcion"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
@@ -73,7 +72,7 @@
 			android:id="@+id/lblPosicion_"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:textAppearance="?android:attr/textAppearanceSmall"
 			android:text="@string/lat_lon"
 			android:layout_marginRight="10dp"
 			android:layout_marginEnd="10dp"
@@ -83,16 +82,17 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:layout_marginRight="15dp"
-			android:layout_marginEnd="15dp"
+			android:layout_marginRight="5dp"
+			android:layout_marginEnd="5dp"
+			android:textIsSelectable="true"
 			android:text="0.0/0.0"
 			android:layout_gravity="center_vertical"/>
 		<ImageButton
 			android:id="@+id/btnActPos"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginRight="10dp"
-			android:layout_marginEnd="10dp"
+			android:layout_marginRight="5dp"
+			android:layout_marginEnd="5dp"
 			android:layout_gravity="center_vertical"
 			android:contentDescription="@string/actualizar_posicion"
 			android:src="@android:drawable/ic_menu_mylocation" />
