--- a/app/src/main/res/layout/act_ruta_cont.xml
+++ b/app/src/main/res/layout/act_ruta_cont.xml
@@ -24,11 +24,10 @@
 		android:layout_alignParentEnd="true"
 		android:layout_alignParentTop="true"
 		>
-		<AutoCompleteTextView
+		<EditText
 			android:id="@+id/txtNombre"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:inputType="textPersonName"
 			android:ems="10"
 			android:hint="@string/nombre"
 			android:maxLines="1"
@@ -46,7 +45,7 @@
 		android:layout_alignParentLeft="true"
 		android:layout_alignParentStart="true"
 		>
-		<AutoCompleteTextView
+		<EditText
 			android:id="@+id/txtDescripcion"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
