--- a/app/src/main/res/layout/lista.xml
+++ b/app/src/main/res/layout/lista.xml
@@ -28,6 +28,7 @@
 	<ImageButton
 		android:id="@+id/btnEditar"
 		android:layout_toLeftOf="@+id/btnMapa"
+		android:layout_toStartOf="@+id/btnMapa"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_centerVertical="true"
