--- a/app/src/main/res/layout/act_buscar_cont.xml
+++ b/app/src/main/res/layout/act_buscar_cont.xml
@@ -32,7 +32,7 @@
 		android:layout_alignParentStart="true"
 		android:layout_alignParentRight="true"
 		android:layout_alignParentEnd="true">
-		<TextEdit
+		<EditText
 			android:id="@+id/txtNombre"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
@@ -56,7 +56,7 @@
 			android:layout_height="wrap_content"
 			android:textAppearance="?android:attr/textAppearanceSmall"
 			android:text="@string/fecha_desde"/>
-		<TextEdit
+		<EditText
 			android:id="@+id/txtFechaIni"
 			android:layout_width="250dp"
 			android:layout_height="wrap_content"
@@ -67,7 +67,7 @@
 			android:layout_height="wrap_content"
 			android:textAppearance="?android:attr/textAppearanceSmall"
 			android:text="@string/fecha_hasta"/>
-		<TextEdit
+		<EditText
 			android:id="@+id/txtFechaFin"
 			android:layout_width="250dp"
 			android:layout_height="wrap_content"
