--- a/app/src/main/res/xml/pref_notification.xml
+++ b/app/src/main/res/xml/pref_notification.xml
@@ -1,11 +1,15 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-	<!-- A 'parent' preference, which enables/disables child preferences (below)
-         when checked/unchecked. -->
+	<SwitchPreference
+		android:defaultValue="true"
+		android:key="notifications_message_type"
+		android:title="@string/pref_msg_notif_type"/>
+
+	<!-- A 'parent' preference, which enables/disables child preferences (below) when checked/unchecked. -->
 	<SwitchPreference
 		android:defaultValue="true"
 		android:key="notifications_new_message"
-		android:title="@string/pref_title_new_message_notifications"/>
+		android:title="@string/pref_msg_notif_type"/>
 
 	<!-- Allows the user to choose a ringtone in the 'notification' category. -->
 	<!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
@@ -15,13 +19,13 @@
 		android:dependency="notifications_new_message"
 		android:key="notifications_new_message_ringtone"
 		android:ringtoneType="notification"
-		android:title="@string/pref_title_ringtone"/>
+		android:title="@string/pref_ringtone"/>
 
 	<!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
 	<SwitchPreference
 		android:defaultValue="true"
 		android:dependency="notifications_new_message"
 		android:key="notifications_new_message_vibrate"
-		android:title="@string/pref_title_vibrate"/>
+		android:title="@string/pref_vibrate"/>
 
 </PreferenceScreen>
