--- a/app/src/main/res/layout/act_buscar.xml
+++ b/app/src/main/res/layout/act_buscar.xml
@@ -25,11 +25,11 @@
 	<include layout="@layout/act_buscar_cont"/>
 
 	<android.support.design.widget.FloatingActionButton
-		android:id="@+id/fab"
+		android:id="@+id/fabVolver"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="bottom|end"
 		android:layout_margin="@dimen/fab_margin"
-		android:src="@android:drawable/ic_menu_search"/>
+		android:src="@android:drawable/ic_menu_revert"/>
 
 </android.support.design.widget.CoordinatorLayout>
