--- a/app/src/main/res/layout/act_buscar_cont.xml
+++ b/app/src/main/res/layout/act_buscar_cont.xml
@@ -13,7 +13,7 @@
 	tools:context="com.cesoft.encuentrame.ActBuscar"
 	tools:showIn="@layout/act_buscar">
 
-	<Switch
+	<!-- Switch
 		android:id="@+id/bActivo"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
@@ -21,11 +21,31 @@
 		android:layout_marginTop="5dp"
 		android:layout_marginBottom="5dp"
 		android:text="@string/activo"
-		/>
+		/ -->
+	<LinearLayout
+		android:id="@+id/layActivo"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal"
+		android:layout_centerHorizontal="true"
+		android:layout_marginTop="5dp"
+		android:layout_marginBottom="5dp">
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:text="@string/activo"/>
+		<Spinner
+			android:id="@+id/spnActivo"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textAppearance="?android:attr/textAppearanceLarge"
+			android:prompt="@string/radio" />
+	</LinearLayout>
 
 	<android.support.design.widget.TextInputLayout
 		android:id="@+id/txtNombre_"
-		android:layout_below="@+id/bActivo"
+		android:layout_below="@+id/layActivo"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_alignParentLeft="true"
