--- a/app/src/main/res/xml/pref_data_sync.xml
+++ b/app/src/main/res/xml/pref_data_sync.xml
@@ -8,6 +8,6 @@
 
 	<SwitchPreference
 		android:defaultValue="true"
-		android:key="is_save_login"
+		android:key="save_login"
 		android:title="@string/pref_save_login"/>
 </PreferenceScreen>
