--- a/app/src/main/res/layout/act_buscar_cont.xml
+++ b/app/src/main/res/layout/act_buscar_cont.xml
@@ -34,13 +34,15 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:layout_marginRight="5dp"
+			android:layout_marginEnd="5dp"
 			android:text="@string/activo"/>
 		<Spinner
 			android:id="@+id/spnActivo"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:prompt="@string/radio" />
+			android:prompt="@string/activo" />
 	</LinearLayout>
 
 	<android.support.design.widget.TextInputLayout
