--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -1,18 +1,27 @@
 <preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<header
-		android:fragment="com.cesoft.encuentrame.ActConfig$DataSyncPreferenceFragment"
+		android:id="@+id/pref_logout"
+		android:key="@string/pref_header_logout"
+		android:icon="@drawable/ic_info_black_24dp"
+		android:summary="@string/pref_header_logout_sum"
+		android:title="@string/pref_header_logout"/>
+
+	<header
+		android:fragment="com.cesoft.encuentrame.ActConfig$OpcionesPreferenceFragment"
 		android:icon="@drawable/ic_sync_black_24dp"
-		android:title="@string/pref_header_data_sync"/>
+		android:summary="@string/pref_header_opciones_sum"
+		android:title="@string/pref_header_opciones"/>
 
 	<header
 		android:fragment="com.cesoft.encuentrame.ActConfig$NotificationPreferenceFragment"
 		android:icon="@drawable/ic_notifications_black_24dp"
+		android:summary="@string/pref_header_notifications_sum"
 		android:title="@string/pref_header_notifications"/>
 
 	<header
 		android:fragment="com.cesoft.encuentrame.ActConfig$GeneralPreferenceFragment"
 		android:icon="@drawable/ic_info_black_24dp"
-		android:title="@string/pref_header_general"/>
+		android:title="@string/pref_header_about"/>
 
 </preference-headers>
