--- a/app/src/main/res/xml/pref_notification.xml
+++ b/app/src/main/res/xml/pref_notification.xml
@@ -1,22 +1,20 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-	<SwitchPreference
-		android:defaultValue="true"
-		android:key="notifications_message_type"
-		android:title="@string/pref_msg_notif_type"/>
-
 	<!-- A 'parent' preference, which enables/disables child preferences (below) when checked/unchecked. -->
-	<SwitchPreference
+	<!-- SwitchPreference
 		android:defaultValue="true"
 		android:key="notifications_new_message"
 		android:title="@string/pref_msg_notif_type"/>
+
+
+		android:dependency="notifications_new_message"
+		-->
 
 	<!-- Allows the user to choose a ringtone in the 'notification' category. -->
 	<!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
 	<!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
 	<RingtonePreference
 		android:defaultValue="content://settings/system/notification_sound"
-		android:dependency="notifications_new_message"
 		android:key="notifications_new_message_ringtone"
 		android:ringtoneType="notification"
 		android:title="@string/pref_ringtone"/>
@@ -24,13 +22,11 @@
 	<!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
 	<SwitchPreference
 		android:defaultValue="true"
-		android:dependency="notifications_new_message"
 		android:key="notifications_new_message_vibrate"
 		android:title="@string/pref_vibrate"/>
 
 	<SwitchPreference
 		android:defaultValue="true"
-		android:dependency="notifications_new_message"
 		android:key="notifications_new_message_lights"
 		android:title="@string/pref_lights"/>
 
