--- a/app/src/main/res/layout/act_maps.xml
+++ b/app/src/main/res/layout/act_maps.xml
@@ -4,8 +4,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:fitsSystemWindows="true"
-	tools:context=".ActAvisoEdit">
+	android:fitsSystemWindows="true">
 
 	<fragment xmlns:android="http://schemas.android.com/apk/res/android"
     	xmlns:tools="http://schemas.android.com/tools"
@@ -22,4 +21,12 @@
 		android:layout_gravity="center_horizontal|bottom"
 		android:layout_margin="@dimen/fab_margin"
 		android:src="@android:drawable/ic_menu_save"/>
+
+	<android.support.design.widget.FloatingActionButton
+		android:id="@+id/btnVolver"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="end|bottom"
+		android:layout_margin="@dimen/fab_margin"
+		android:src="@android:drawable/ic_menu_revert"/>
 </android.support.design.widget.CoordinatorLayout>
