--- a/app/src/main/res/layout/act_maps.xml
+++ b/app/src/main/res/layout/act_maps.xml
@@ -22,4 +22,12 @@
 		android:layout_gravity="center_horizontal|bottom"
 		android:layout_margin="@dimen/fab_margin"
 		android:src="@android:drawable/ic_menu_save"/>
+
+	<android.support.design.widget.FloatingActionButton
+		android:id="@+id/btnVolver"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="end|bottom"
+		android:layout_margin="@dimen/fab_margin"
+		android:src="@android:drawable/ic_menu_revert"/>
 </android.support.design.widget.CoordinatorLayout>
