--- a/app/src/main/res/layout/act_lugar_cont.xml
+++ b/app/src/main/res/layout/act_lugar_cont.xml
@@ -74,16 +74,16 @@
 			android:layout_height="wrap_content"
 			android:textAppearance="?android:attr/textAppearanceSmall"
 			android:text="@string/lat_lon"
-			android:layout_marginRight="10dp"
-			android:layout_marginEnd="10dp"
+			android:layout_marginRight="3dp"
+			android:layout_marginEnd="3dp"
 			android:layout_gravity="center_vertical"/>
 		<TextView
 			android:id="@+id/lblPosicion"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:layout_marginRight="5dp"
-			android:layout_marginEnd="5dp"
+			android:layout_marginRight="3dp"
+			android:layout_marginEnd="3dp"
 			android:textIsSelectable="true"
 			android:text="0.0/0.0"
 			android:layout_gravity="center_vertical"/>
@@ -91,11 +91,13 @@
 			android:id="@+id/btnActPos"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginRight="5dp"
-			android:layout_marginEnd="5dp"
+			android:layout_marginRight="1dp"
+			android:layout_marginEnd="1dp"
 			android:layout_gravity="center_vertical"
 			android:contentDescription="@string/actualizar_posicion"
-			android:src="@android:drawable/ic_menu_mylocation" />
+			android:src="@android:drawable/ic_menu_mylocation"
+			style="@style/btnStyle"
+			/>
 	</LinearLayout>
 
 
