--- a/app/src/main/res/layout/act_aviso_cont.xml
+++ b/app/src/main/res/layout/act_aviso_cont.xml
@@ -83,27 +83,28 @@
 			android:layout_height="wrap_content"
 			android:textAppearance="?android:attr/textAppearanceMedium"
 			android:text="@string/lat_lon"
-			android:layout_marginRight="15dp"
-			android:layout_marginEnd="15dp"
+			android:layout_marginRight="5dp"
+			android:layout_marginEnd="5dp"
 			android:layout_gravity="center_vertical"/>
 		<TextView
 			android:id="@+id/lblPosicion"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:layout_marginRight="10dp"
-			android:layout_marginEnd="10dp"
+			android:layout_marginRight="2dp"
+			android:layout_marginEnd="2dp"
 			android:text="0.0/0.0"
 			android:layout_gravity="center_vertical"/>
 		<ImageButton
 			android:id="@+id/btnActPos"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginRight="10dp"
-			android:layout_marginEnd="10dp"
+			android:layout_marginRight="2dp"
+			android:layout_marginEnd="2dp"
 			android:layout_gravity="center_vertical"
 			android:contentDescription="@string/actualizar_posicion"
-			android:src="@android:drawable/ic_menu_mylocation" />
+			android:src="@android:drawable/ic_menu_mylocation"
+			style="@style/btnStyle" />
 	</LinearLayout>
 
 	<LinearLayout
