Funciona widget lugar, intentandolo con rutas

--- a/app/src/main/res/layout/act_widget_nuevo.xml
+++ b/app/src/main/res/layout/act_widget_nuevo.xml
@@ -6,7 +6,7 @@
 	android:orientation="horizontal">
 
 	<EditText
-		android:id="@+id/txtNuevoLugar"
+		android:id="@+id/txtNombre"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:hint="@string/nuevo_lugar"
