--- a/app/src/main/res/xml/widget_ruta.xml
+++ b/app/src/main/res/xml/widget_ruta.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:widgetCategory="keyguard|home_screen"
-	android:initialKeyguardLayout="@layout/widget_ruta"
 	android:initialLayout="@layout/widget_ruta"
 	android:resizeMode="horizontal|vertical"
-	android:minResizeWidth="110dp"
+	android:minResizeWidth="250dp"
 	android:minResizeHeight="40dp"
 	android:minHeight="40dp"
-	android:minWidth="300dp"
+	android:minWidth="250dp"
+	android:previewImage="@mipmap/nueva_ruta"
 	android:updatePeriodMillis="0" >
+	<!-- minWidth or minHeight => 70×n−30 being n the number or columns or rows respectively  -->
+	<!--
+	android:widgetCategory="keyguard|home_screen"
+	android:initialKeyguardLayout="@layout/widget_ruta"
+	-->
 	<!-- updatePeriodMillis: doesn't work -->
-	<!-- android:configure="com.cesoftware.Organizate.CesWidgetConfig" -->
+	<!-- android:configure="com.cesoft.encuentrame.WidgetConfig" -->
 	<!-- DONT DRAIN THE BATTERY: If device is asleep when it's time for update (updatePeriodMillis), then the device will wake up. Set an alarm with an Intent that your AppWidgetProvider receives,
 	 using the AlarmManager. Set it to ELAPSED_REALTIME or RTC, which will only deliver the alarm when the device is awake.	Then set updatePeriodMillis to 0  -->
-	<!-- android:previewImage="@drawable/" -->
 </appwidget-provider>
