--- a/app/src/main/res/layout/widget_ruta.xml
+++ b/app/src/main/res/layout/widget_ruta.xml
@@ -43,7 +43,11 @@
 			android:id="@+id/txtRuta"
 			android:layout_weight="1"
 			android:layout_width="0dp"
-			android:layout_height="wrap_content"/>
+			android:layout_height="wrap_content"
+			style="@android:style/TextAppearance.Small"
+			android:gravity="center_horizontal|center_vertical"
+			android:layout_gravity="center_horizontal|center_vertical"
+			android:layout_margin="2dip" />
 
 		<ImageButton
 			android:id="@+id/btnStop"
