--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -19,9 +19,7 @@
 			android:id="@+id/toolbar"
 			android:layout_width="match_parent"
 			android:layout_height="?attr/actionBarSize"
-			android:background="?attr/colorPrimary"
-			app:layout_scrollFlags="scroll|enterAlways"
-			app:popupTheme="@style/AppTheme.PopupOverlay" />
+			android:background="?attr/colorPrimary" />
 		<android.support.design.widget.TabLayout
 			android:id="@+id/tabs"
 			android:layout_width="match_parent"
@@ -32,6 +30,8 @@
 		android:id="@+id/container"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
+		app:layout_scrollFlags="scroll|enterAlways"
+		app:popupTheme="@style/AppTheme.PopupOverlay"
 		app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </android.support.design.widget.CoordinatorLayout>
