--- a/app/src/main/res/layout/act_main_frag.xml
+++ b/app/src/main/res/layout/act_main_frag.xml
@@ -3,6 +3,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:paddingBottom="2dp"
 	android:paddingLeft="4dp"
 	android:paddingRight="2dp"
@@ -15,7 +16,9 @@
 		android:layout_height="wrap_content"
 		android:layout_alignParentTop="true"
 		android:layout_alignParentLeft="true"
-		android:layout_alignParentStart="true"/>
+		android:layout_alignParentStart="true"
+		app:layout_behavior="@string/appbar_scrolling_view_behavior"
+		/>
 
 	<android.support.design.widget.FloatingActionButton
 		android:id="@+id/fabNuevo"
