Se eliminan Context estaticos que pueden causer memory leaks. Algo de limpieza. Cambio a Android Studio 2.2

--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -2,17 +2,23 @@
 
 	<EditTextPreference
 		android:title="@string/app_name"
+		android:editable="false"
+		android:clickable="false"
 		android:icon="@mipmap/ic_launcher"/>
 
 	<EditTextPreference
+		android:editable="false"
+		android:clickable="false"
 		android:summary="@string/app_desc"/>
 
 	<EditTextPreference
 		android:title="@string/app_lice_tit"
+		android:editable="false"
 		android:summary="@string/app_lice"/>
 
 	<EditTextPreference
 		android:title="@string/app_vers_tit"
+		android:editable="false"
 		android:key="version"
 		android:summary="@string/app_vers"/>
 
