Mostrar distancia total etc

--- a/app/src/main/res/layout-land/act_lugar_cont.xml
+++ b/app/src/main/res/layout-land/act_lugar_cont.xml
@@ -39,7 +39,7 @@
 			android:ems="10"
 			android:hint="@string/nombre"
 			android:maxLines="1"
-			android:singleLine="true"/>
+			android:inputType="textCapWords"/>
 	</android.support.design.widget.TextInputLayout>
 
 
@@ -59,9 +59,8 @@
 			android:layout_height="wrap_content"
 			android:hint="@string/descripcion"
 			android:ems="10"
-			android:inputType="textMultiLine"
-			android:maxLines="3"
-			android:singleLine="true"/>
+			android:inputType="textMultiLine|textCapWords"
+			android:maxLines="3"/>
 	</android.support.design.widget.TextInputLayout>
 
 	<!-- DATE CREATED and MODIFIED ? -->
