--- a/app/src/main/res/layout/act_lugar_cont.xml
+++ b/app/src/main/res/layout/act_lugar_cont.xml
@@ -31,7 +31,7 @@
 			android:ems="10"
 			android:hint="@string/nombre"
 			android:maxLines="1"
-			android:singleLine="true"/>
+			android:inputType="textCapWords"/>
 	</android.support.design.widget.TextInputLayout>
 
 
@@ -51,9 +51,8 @@
 			android:layout_height="wrap_content"
 			android:hint="@string/descripcion"
 			android:ems="10"
-			android:inputType="textMultiLine"
-			android:maxLines="3"
-			android:singleLine="true"/>
+			android:inputType="textMultiLine|textCapWords"
+			android:maxLines="3"/>
 	</android.support.design.widget.TextInputLayout>
 
 	<!-- DATE CREATED and MODIFIED ? -->
@@ -85,7 +84,7 @@
 			android:layout_marginRight="2dp"
 			android:layout_marginEnd="2dp"
 			android:textIsSelectable="true"
-			android:text="0.0/0.0"
+			android:text=""
 			android:layout_gravity="center_vertical"/>
 		<ImageButton
 			android:id="@+id/btnActPos"
