Estadisticas de ruta Antes de App Store Ver. 1.91

--- a/app/src/main/res/menu/menu_aviso.xml
+++ b/app/src/main/res/menu/menu_aviso.xml
@@ -9,7 +9,7 @@
 		android:orderInCategory="100"
 		android:title="@string/eliminar"
 		android:icon="@android:drawable/ic_menu_delete"
-		app:showAsAction="ifRoom">
+		app:showAsAction="always">
 	</item>
 	<item
 		android:id="@+id/menu_guardar"
