--- a/app/src/main/res/menu/menu_act_main.xml
+++ b/app/src/main/res/menu/menu_act_main.xml
@@ -7,17 +7,17 @@
 		android:orderInCategory="100"
 		android:title="@string/ver_mapa"
 		android:icon="@android:drawable/ic_menu_mapmode"
-		app:showAsAction="ifRoom"/>
+		app:showAsAction="always"/>
 	<item
 		android:id="@+id/action_buscar"
 		android:orderInCategory="110"
 		android:title="@string/buscar"
 		android:icon="@android:drawable/ic_menu_search"
-		app:showAsAction="ifRoom"/>
+		app:showAsAction="always"/>
 	<item
 		android:id="@+id/action_config"
 		android:orderInCategory="120"
 		android:title="@string/config"
 		android:icon="@android:drawable/ic_menu_preferences"
-		app:showAsAction="ifRoom"/>
+		app:showAsAction="always"/>
 </menu>
