--- a/app/src/main/res/menu/menu_ruta.xml
+++ b/app/src/main/res/menu/menu_ruta.xml
@@ -5,15 +5,22 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	tools:context=".ActRuta">
 	<item
-		android:id="@+id/menu_eliminar"
+		android:id="@+id/menu_estadisticas"
 		android:orderInCategory="100"
+		android:title="@string/estadisticas"
+		android:icon="@android:drawable/ic_menu_info_details"
+		app:showAsAction="always">
+	</item>
+	<item
+		android:id="@+id/menu_eliminar"
+		android:orderInCategory="200"
 		android:title="@string/eliminar"
 		android:icon="@android:drawable/ic_menu_delete"
-		app:showAsAction="ifRoom">
+		app:showAsAction="always">
 	</item>
 	<item
 		android:id="@+id/menu_guardar"
-		android:orderInCategory="200"
+		android:orderInCategory="300"
 		android:title="@string/guardar"
 		android:icon="@android:drawable/ic_menu_save"
 		app:showAsAction="always">
